--- a/app/src/main/res/drawable/ic_categories_trend_6.xml
+++ b/app/src/main/res/drawable/ic_categories_trend_6.xml
@@ -1,50 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="32dp"
-    android:height="32dp"
-    android:viewportWidth="32"
-    android:viewportHeight="32">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
 
     <path
-        android:strokeColor="#000000"
-        android:strokeWidth="2"
-        android:strokeLineJoin="round"
-        android:strokeMiterLimit="10"
-        android:strokeLineCap="round"
-        android:pathData="M14,17V3c0-1.1,0.9-2,2-2h0c1.1,0,2,0.9,2,2v14" />
-    <path
-        android:strokeColor="#000000"
-        android:strokeWidth="2"
-        android:strokeLineJoin="round"
-        android:strokeMiterLimit="10"
-        android:strokeLineCap="round"
-        android:pathData="M 14 14 L 18 14" />
-    <path
-        android:strokeColor="#000000"
-        android:strokeWidth="2"
-        android:strokeLineJoin="round"
-        android:strokeMiterLimit="10"
-        android:strokeLineCap="round"
-        android:pathData="M26,31H6l2.7-12.4c0.2-0.9,1-1.6,2-1.6h10.8c0.9,0,1.8,0.7,2,1.6L26,31z" />
-    <path
-        android:strokeColor="#000000"
-        android:strokeWidth="2"
-        android:strokeLineJoin="round"
-        android:strokeMiterLimit="10"
-        android:strokeLineCap="round"
-        android:pathData="M 9 21 L 23 21" />
-    <path
-        android:strokeColor="#000000"
-        android:strokeWidth="2"
-        android:strokeLineJoin="round"
-        android:strokeMiterLimit="10"
-        android:strokeLineCap="round"
-        android:pathData="M 11 27 L 11 30" />
-    <path
-        android:strokeColor="#000000"
-        android:strokeWidth="2"
-        android:strokeLineJoin="round"
-        android:strokeMiterLimit="10"
-        android:strokeLineCap="round"
-        android:pathData="M 21 29 L 21 30" />
+        android:fillColor="#292D32"
+        android:pathData="M16 2H8C5 2 3 4 3 7V17C3 20 5 22 8 22H16C19 22 21 20 21 17V7C21 4 19 2 16 2ZM17.57 8.48L15.39 11.98C15.33 12.07 15.23 12.14 15.13 12.15C15.11 12.15 15.09 12.15 15.08 12.15C14.99 12.15 14.9 12.12 14.83 12.06C13.22 10.63 10.8 10.63 9.19 12.06C9.11 12.13 9 12.17 8.89 12.15C8.78 12.13 8.68 12.07 8.63 11.98L6.45 8.48C6.33 8.33 6.36 8.13 6.5 8C9.63 5.21 14.36 5.21 17.5 8C17.64 8.13 17.67 8.33 17.57 8.48Z" />
 </vector>
